--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "^2.17",
         "laravel/breeze": "^2.1",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "nesbot/carbon": "^3.8",
+        "sabre/dav": "^4.6",
+        "spatie/laravel-google-calendar": "^3.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
